{
    "name": "TouchActions",
    "maps": [
        {
            "name": "Game",
            "id": "c24f25ca-d4f9-4c01-a86b-40a8ccea2534",
            "actions": [
                {
                    "name": "Touch",
                    "type": "PassThrough",
                    "id": "a5cf9ffd-e7f3-47da-b35b-884d3bcd1c23",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "9bfd123a-5e02-4071-93c1-d50381cfad0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "830e03d6-955e-4c80-8a96-2191cb2a09f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55838944-ee7e-467d-beec-504308420751",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09bc3e80-f48a-45fd-82bc-bd82b93f5920",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f1f12ef-b3e6-49c9-8aad-4a7c8d3acc27",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}